@@ -1,4 +1,4 @@
-.TH SG_INQ "8" "September 2009" "sg3_utils\-1.28" SG3_UTILS
+.TH SG_INQ "8" "February 2010" "sg3_utils\-1.29" SG3_UTILS
 .SH NAME
 sg_inq \- sends a SCSI INQUIRY or ATA IDENTIFY (PACKET) DEVICE command
 and outputs the response
@@ -31,9 +31,9 @@ options.
 .PP
 An important "non\-standard" INQUIRY page is the Device Identification
 Vital Product Data (VPD) page [0x83]. Since SPC\-3, support for this page
-is mandatory. The \fI\-\-id\fR option decodes this page. To get fine grained
-decoding of device identification VPD page and recently added VPD pages,
-plus some vendor specific VPD pages, see the sg_vpd(8) utility.
+is mandatory. The \fI\-\-id\fR option decodes this page. New VPD page
+information is no longer being added to this utility. To get information
+on new VPD pages see the sg_vpd(8) or sdparm(8) utilities.
 .PP
 If the \fIDEVICE\fR exists and the SCSI INQUIRY fails (because the SG_IO ioctl
 is not supported) then an ATA IDENTIFY (PACKET) DEVICE is tried. If it
@@ -329,9 +329,9 @@ Written by Doug Gilbert
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2001\-2009 Douglas Gilbert
+Copyright \(co 2001\-2010 Douglas Gilbert
 .br
 This software is distributed under the GPL version 2. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .SH "SEE ALSO"
-.B sg_opcodes(8), sg_vpd(8), hdparm(8), sgdiag(scsirastools)
+.B sg_opcodes(8), sg_vpd(8), sdparm(8), hdparm(8), sgdiag(scsirastools)
