@@ -2,7 +2,7 @@ sg3-utils (1.29-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Doug Gilbert <dgilbert@interlog.com>  Thu, 18 Feb 2010 16:40:00 +0100
+ -- Doug Gilbert <dgilbert@interlog.com>  Sun, 28 Feb 2010 09:30:00 -0500
 
 sg3-utils (1.28-0.1) unstable; urgency=low
 
