@@ -2,14 +2,18 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.29 [20100218] [svn: r327]
+Changelog for sg3_utils-1.29 [20100228] [svn: r328]
   - sg_rtpg: new logical block dependent state and bit (spc4r23)
   - sg_start: add '--readonly' option for ATA disks
   - sg_lib: update asc/ascq list to spc4r22
   - sg_inq: update version descriptor list to spc4r23
   - sg_vpd: block device characteristics page: fix form factor
     - update Extended Inquiry VPD page to spc4r23
+    - Automation device serial number and Data transfer device
+      element VPD pages (ssc4r01)
   - sg_logs: add thin provisioning and solid state media log pages
+    - addition of IBM LTO specific log pages
+  - sg_modes: new page names from ssc4r01
   - sg_ses: sync with ses3r02 (SAS-2.1 connector types)
   - add AM_MAINTAINER_MODE to configure.ac to lessen build issues
 
